--- a/images/css/main.css
+++ b/images/css/main.css
@@ -129,13 +129,13 @@ button {
   right: -6px;
 }
 .section-yellow {
-  background: url('/images/img/banner-background.png') no-repeat center;
+  background: url('/images/img/banner-background.png') no-repeat center/cover;
   padding-top: 156px;
   padding-bottom: 106px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .second-section-yellow {
-  background: url('/images/img/banner-background.png') no-repeat center;
+  background: url('/images/img/banner-background.png') no-repeat center/cover;
   padding-top: 123px;
   padding-bottom: 120px;
 }
@@ -186,9 +186,6 @@ button {
   line-height: 15px;
   color: #9A9A9A;
 }
-.banner {
-  margin-top: 6px;
-}
 .banner-title {
   font-family: "Gilroy-Extrabold";
   font-size: 72px;
@@ -238,7 +235,10 @@ button {
   padding-bottom: 19px;
 }
 .banner-slider-image {
-  max-width: 100%;
+  max-width: 95%;
+}
+.swiper-slide {
+  margin-left: 3px;
 }
 .swiper-buttons {
   display: flex;
@@ -1388,6 +1388,12 @@ input[type=number] {
   .container {
     max-width: 1200px;
   }
+  .promotion-video-image {
+    max-width: 100%;
+  }
+  .business-image {
+    max-width: 100%;
+  }
 }
 @media screen and (max-width: 1199px) {
   .nav-item:not(:first-child):before {
@@ -1438,7 +1444,7 @@ input[type=number] {
     padding-bottom: 80px;
   }
   .promotion-video-img {
-    max-width: 125%;
+    max-width: 100%;
   }
   .promotion-title {
     font-size: 23px;
@@ -1471,7 +1477,7 @@ input[type=number] {
     margin-top: 100px;
   }
   .business-image {
-    max-width: 125%;
+    max-width: 100%;
   }
   .business-title {
     font-size: 23px;
@@ -1572,7 +1578,7 @@ input[type=number] {
     margin-left: 9px;
   }
   .banner-title {
-    font-size: 46px;
+    font-size: 45px;
     line-height: 45px;
   }
   .banner-subtitle {
@@ -1608,7 +1614,7 @@ input[type=number] {
     padding-bottom: 50px;
   }
   .promotion-video-img {
-    max-width: 135%;
+    max-width: 100%;
   }
   .advantages-title {
     font-size: 16px;
@@ -1627,7 +1633,7 @@ input[type=number] {
     line-height: 20px;
   } 
   .business-image {
-    max-width: 135%;
+    max-width: 100%;
   }
   .tip-text {
     font-size: 14px;
@@ -1647,6 +1653,7 @@ input[type=number] {
     margin-left: 10px;
     font-size: 13px;
     line-height: 16px;
+    max-width: 65%;
   }
   .success-card-img {
     margin-left: 15px;
@@ -1668,6 +1675,9 @@ input[type=number] {
     max-width: 69%;
     margin-top: 10px;
     line-height: 24px;
+  }
+  .rel-card {
+    margin-top: 60px;
   }
   .logo-lg {
     max-width: 40%;
@@ -1703,7 +1713,7 @@ input[type=number] {
     margin-left: 0;
   }
   .footer-logo-text {
-    font-size: 15px;
+    font-size: 14px;
     line-height: 19px;
     margin-top: 10px;
   }
@@ -1740,8 +1750,80 @@ input[type=number] {
   .header-fixed.active .logo-image {
     height: 68px;
   }
+  .header-burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 3;
+  }
+  .header-burger span {
+    position: absolute;
+    background-color: #27AE60;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    left: 0;
+    transition: all 0.3s ease;
+  }
+  .header-burger:before,
+  .header-burger:after {
+    content: '';
+    background-color: #27AE60;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease;
+  }
+  .header-burger:before {
+    top: 0;
+  }
+  .header-burger:after {
+    bottom: 0;
+  }
+  .header-burger.active span {
+    transform: scale(0);
+  }
+  .header-burger.active:before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+  .header-burger.active:after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
   .nav-menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    margin-top: 0;
+    margin-left: 0;
+    padding: 22% 50% 0 40%;
+    z-index: 3;
+  }
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+  }
+  .nav-item {
+    margin-bottom: 25px;
+    min-width: 150px;
+    text-align: center;
+  }
+  .nav-link {
+    font-size: 15px;
+  }
+  .nav-item:not(:first-child):before {
     display: none;
+  }
+  .header-burger:hover {
+    transform: scale(1.2);
+    transition: all 0.4s ease;
   }
   .link-group {
     margin-top: 20px;
@@ -1760,7 +1842,7 @@ input[type=number] {
     margin-right: 0;
   }
   .banner-slider-image {
-    max-width: 100%;
+    max-width: 95%;
   }
   .banner-cards {
     display: none;
@@ -1792,6 +1874,8 @@ input[type=number] {
   .swiper-buttons {
     height: 33px;
     width: 45px;
+    left: 57%;
+    bottom: 21%;
   }
   .swiper-button-prev {
     top: 3%;
@@ -1960,66 +2044,21 @@ input[type=number] {
   .made-by-text {
     margin-right: 0;
   }
-	.header-burger {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 20px;
-  }
-  .header-burger span {
-    position: absolute;
-    background-color: #27AE60;
-    width: 100%;
-    height: 2px;
-    top: 9px;
-    left: 0;
-  }
-  .header-burger:before,
-  .header-burger:after {
-    content: '';
-    background-color: #27AE60;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-  }
-  .header-burger:before {
-    top: 0;
-  }
-  .header-burger:after {
-    bottom: 0;
-  }
-  .burger-menu {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    margin-top: 0;
-    margin-left: 0;
-    padding: 10% 50% 0 50%;
-    z-index: 3;
-  }
-  .br-nav-list {
-    display: flex;
-    opacity: 1;
-    flex-direction: column;
-  }
-  .br-nav-item {
-    margin-bottom: 20px;
-  }
-  .header-burger:hover {
-    transform: scale(1.2);
-    transition: all 0.4s ease;
-  }
 }
 @media screen and (max-width: 576px) {
+  .container {
+    max-width: 300px;
+  }
   .user-link {
     font-size: 12px;
-    max-width: 50%;
+    max-width: 35%;
     margin-right: 5px;
+  }
+  .user-icon {
+    margin: 0;
+  }
+  .user-link-text {
+    display: none;
   }
   .products-num {
     font-size: 9px;
@@ -2036,18 +2075,55 @@ input[type=number] {
   .banner-slider {
     display: none;
   }
+  .banner-title {
+    font-size: 30px;
+  }
+  .banner-subtitle {
+    font-size: 18px;
+  }
+  .banner-text {
+    font-size: 14px;
+  }
   .swiper-buttons {
     display: none;
+  }
+  .brand-icon-text {
+    font-size: 12px;
+  }
+  .brand-card-text {
+    font-size: 14px;
   }
   .products {
     padding-top: 5px;
   }
+  .product-card-title {
+    font-size: 17px;
+  }
   .advantage-text {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 21px;
+    margin-left: 13px;
+  }
+  .price-text {
+    font-size: 14px;
+  }
+  .price {
+    font-size: 14px;
+  }
+  .buy-link {
+    width: 120px;
+  }
+  .advantage-icon {
+    flex: 0 0 30px;
   }
   .promotion {
     margin-top: 40px;
+  }
+  .promotion-title {
+    font-size: 21px;
+  }
+  .success-title {
+    font-size: 20px;
   }
   .news-date {
     margin-left: 30px;
